--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
+        "@tailwindcss/typography": "^0.5.4",
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.19",
-        "axios": "^1.6.4",
         "daisyui": "^4.7.3",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.38",
+        "postcss-nesting": "^12.0.1",
         "tailwindcss": "^3.4.1",
         "vite": "^5.0"
     }
