--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.4",
         "livewire/volt": "^1.0",
-        "robsontenorio/mary": "^1.25"
+        "robsontenorio/mary": "^1.25",
+        "symfony/http-client": "^7.0",
+        "symfony/mailgun-mailer": "^7.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
